test/darwin/fail/gettimeofday02.v3
//@execute = true
component gettimeofday02 {
	def main() -> bool {
		return doGet(Darwin.gettimeofday) < 0;
	}
	def doGet(f: (Pointer, Pointer) -> (int, int)) -> int {
		var timeval: Pointer, timezone: Pointer;
		return f(timeval, timezone).0; // invalid (null) arguments
	}
}
